--- a/timeseries.ipynb
+++ b/timeseries.ipynb
@@ -5,7 +5,7 @@
    "id": "f0e16f00-a266-4880-b1ef-2f4b804c2ca0",
    "metadata": {},
    "source": [
-    "# *** Delhi Air-quality forcasting using ARIMA Model ( PM 2.5 ) ***"
+    "# *** Delhi Air-quality forecasting using ARIMA Model ( PM 2.5 ) ***"
    ]
   },
   {
